--- a/Documents/Отчёт о проведённом тестировании.md
+++ b/Documents/Отчёт о проведённом тестировании.md
@@ -1,7 +1,7 @@
 #  Отчёт о проведённом тестировании
 
 ## Краткое описание
-Согласно утверждённому [Плану автоматизации тестирования](https://github.com/TatianaHrip/diploma-project/Documens/Plan.md) проведено тестирование веб-сервиса — автоматизированы сценарии (как позитивные, так и негативные) покупки тура, в том числе в кредит.
+Согласно утверждённому [Плану автоматизации тестирования](https://github.comhttps://github.com/TatianaHrip/diplom/Plan.md) проведено тестирование веб-сервиса — автоматизированы сценарии (как позитивные, так и негативные) покупки тура, в том числе в кредит.
 
 ## Количество тест-кейсов
 Всего выполнено 39 автоматизированных тест-кейсов
