--- a/Documents/Отчёт о проведённой автоматизации.md
+++ b/Documents/Отчёт о проведённой автоматизации.md
@@ -3,7 +3,7 @@
 Проект представляет собой автоматизацию тестирования комплексного веб-сервиса, взаимодействующего с СУБД и API Банка. С условиями задачи и требованиями к автоматизации можно ознакомиться [по ссылке](https://github.com/netology-code/qa-diploma/blob/master/README.md).
 
 ## Запланировано
-Согласно утверждённому [Плану автоматизации тестирования](https://github.comhttps://github.com/TatianaHrip/diplom/Plan.md) необходимо было автоматизировать тестирование сценариев (как позитивных, так и негативных) покупки тура, в том числе в кредит.
+Согласно утверждённому [Плану тестирования](https://github.com/MeriAv/Diplom/blob/master/Documentation/Plan.md) необходимо было автоматизировать тестирование сценариев (как позитивных, так и негативных) покупки тура, в том числе в кредит.
 
 ## Выполнено
 Для выполнения указанной задачи разработано 39 тест-кейсов.
