Update Отчёт о проведённой автоматизации.md

--- a/Documents/Отчёт о проведённой автоматизации.md
+++ b/Documents/Отчёт о проведённой автоматизации.md
@@ -1,6 +1,6 @@
 #  Отчёт о проведённой автоматизации
 
-Проект представляет собой автоматизацию тестирования комплексного веб-сервиса, взаимодействующего с СУБД и API Банка. С условиями задачи и требованиями к автоматизации можно ознакомиться [по ссылке](https://github.com/netology-code/qa-diploma/blob/master/README.md).
+Проект представляет собой автоматизацию тестирования комплексного веб-сервиса, взаимодействующего с СУБД и API Банка. С условиями задачи и требованиями к автоматизации можно ознакомиться [по ссылке](https://github.com/netology-code/qa-diploma).
 
 ## Запланировано
 Согласно утверждённому [Плану тестирования](https://github.com/MeriAv/Diplom/blob/master/Documentation/Plan.md) необходимо было автоматизировать тестирование сценариев (как позитивных, так и негативных) покупки тура, в том числе в кредит.
