Update Отчёт о проведённой автоматизации.md

--- a/Documents/Отчёт о проведённой автоматизации.md
+++ b/Documents/Отчёт о проведённой автоматизации.md
@@ -16,3 +16,6 @@
 
 ## Общий итог по времени
 Задачи выполнены в рамках запланированного времени.
+
+
+![image](https://user-images.githubusercontent.com/72654493/133611595-d525de14-52c2-455f-b404-72b2d8efbb17.png)
